language/move-lang/tests/move_check/unit_test/expected_failure_not_test.unit_test.exp
error[E10004]: invalid usage of known attribute
  ┌─ tests/move_check/unit_test/expected_failure_not_test.move:7:9
  │
6 │     #[expected_failure]
  │       ---------------- Attributed as #[expected_failure] here
7 │     fun foo() { }
  │         ^^^ Only functions defined as a test with #[test] can also have an #[expected_failure] attribute

error[E10004]: invalid usage of known attribute
   ┌─ tests/move_check/unit_test/expected_failure_not_test.move:10:9
   │
 9 │     #[test_only, expected_failure]
   │                  ---------------- Attributed as #[expected_failure] here
10 │     fun bar() { }
   │         ^^^ Only functions defined as a test with #[test] can also have an #[expected_failure] attribute

